added some stuff

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This website was created by Uros. It uses data from mapbox and something else.</p>
         <img class='portrait' src="img/maxresdefault.jpg" />
     </div>
 
